# usso-jwt

./: .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: release.yml
src/jwt/: core.py  exceptions.py  jwt.py  sign.py  verify.py
src/jwt/algorithms/: __init__.py  base.py  ecdsa.py  eddsa.py  hmac.py  rsa.py
src/usso_jwt/: __init__.py  config.py  core.py  enums.py  exceptions.py  jwt.py  schemas.py  sign.py  utils.py  verify.py
src/usso_jwt/algorithms/: __init__.py  base.py  ecdsa.py  eddsa.py  hmac.py  rsa.py
tests/: conftest.py  test_ecdsa.py  test_eddsa.py  test_hmac.py  test_jwt.py  test_rsa.py  test_sign.py  test_verify.py
tests/algorithm/: conftest.py  test_base.py  test_ecdsa.py  test_eddsa.py  test_hmac.py  test_rsa.py
