[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "usso-jwt"
version = "0.1.9"
description = "A simple and lightweight Python package for handling JWT (JSON Web Token) operations with USSO (Unified Single Sign-On)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = [
  "usso",
  "usso-jwt",
  "sso",
  "authentication",
  "security",
  "jwt",
  "json-web-token",
  "token",
]
authors = [{ name = "Mahdi Kiani", email = "mahdikiany@gmail.com" }]
maintainers = [{ name = "Mahdi Kiani", email = "mahdikiany@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pydantic>=2",
  "json-advanced",
  "httpx",
  "cryptography",
  "cachetools>=5.0.0",
]


[project.urls]
"Homepage" = "https://github.com/ussoio/usso-jwt"
"Bug Reports" = "https://github.com/ussoio/usso-jwt/issues"
"Funding" = "https://github.com/ussoio/usso-jwt"
"Say Thanks!" = "https://saythanks.io/to/mahdikiani"
"Source" = "https://github.com/ussoio/usso-jwt"

[tool.setuptools]
package-data = { "usso_jwt" = ["*.dat"] }

[tool.ruff]
line-length = 79
target-version = "py313"
fix = true
unsafe-fixes = true
preview = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
